crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__overlapnoindices.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": {
                "content": [
                  {
                    "content": [
                      {
                        "content": "het",
                        "type": "text"
                      }
                    ],
                    "raw_text": "het",
                    "span": {
                      "end": 158,
                      "start": 155
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "hele",
                        "type": "text"
                      }
                    ],
                    "raw_text": "hele",
                    "span": {
                      "end": 163,
                      "start": 159
                    },
                    "type": "word"
                  }
                ]
              },
              "scoped_annotations": [
                {
                  "type": "overlap_begin"
                },
                {
                  "type": "partialretracing"
                }
              ],
              "type": "annotated_group"
            },
            {
              "content": [
                {
                  "content": "het",
                  "type": "text"
                }
              ],
              "raw_text": "het",
              "span": {
                "end": 176,
                "start": 173
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "hele",
                  "type": "text"
                }
              ],
              "raw_text": "hele",
              "span": {
                "end": 181,
                "start": 177
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "onderzoek",
                  "type": "text"
                }
              ],
              "raw_text": "onderzoek",
              "span": {
                "end": 191,
                "start": 182
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "gaat",
                  "type": "text"
                }
              ],
              "raw_text": "gaat",
              "span": {
                "end": 196,
                "start": 192
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "de",
                  "type": "text"
                }
              ],
              "raw_text": "de",
              "span": {
                "end": 199,
                "start": 197
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "mist",
                  "type": "text"
                }
              ],
              "raw_text": "mist",
              "span": {
                "end": 204,
                "start": 200
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "in",
                  "type": "text"
                }
              ],
              "raw_text": "in",
              "span": {
                "end": 207,
                "start": 205
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "zo",
                  "type": "text"
                }
              ],
              "raw_text": "zo",
              "span": {
                "end": 210,
                "start": 208
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
