crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__overlaps-dt.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "there",
                  "type": "text"
                }
              ],
              "raw_text": "there",
              "scoped_annotations": [
                {
                  "type": "overlap_end"
                }
              ],
              "span": {
                "end": 159,
                "start": 154
              },
              "type": "annotated_word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "mhm",
                  "type": "text"
                }
              ],
              "raw_text": "mhm",
              "scoped_annotations": [
                {
                  "type": "overlap_begin"
                },
                {
                  "type": "overlap_end"
                }
              ],
              "span": {
                "end": 175,
                "start": 172
              },
              "type": "annotated_word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": {
                "content": [
                  {
                    "content": [
                      {
                        "content": "ant",
                        "type": "text"
                      }
                    ],
                    "raw_text": "ant",
                    "span": {
                      "end": 196,
                      "start": 193
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "that's",
                        "type": "text"
                      }
                    ],
                    "raw_text": "that's",
                    "span": {
                      "end": 203,
                      "start": 197
                    },
                    "type": "word"
                  }
                ]
              },
              "scoped_annotations": [
                {
                  "type": "overlap_begin"
                }
              ],
              "type": "annotated_group"
            },
            {
              "content": [
                {
                  "content": "where",
                  "type": "text"
                }
              ],
              "raw_text": "where",
              "span": {
                "end": 214,
                "start": 209
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "you",
                  "type": "text"
                }
              ],
              "raw_text": "you",
              "span": {
                "end": 218,
                "start": 215
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
