crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__overlaps.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Speaker",
            "speaker_code": "SPK"
          },
          {
            "name": null,
            "role": "Adult",
            "speaker_code": "LSN"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "options": [
          "CA"
        ],
        "type": "options"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Speaker",
        "speaker": "SPK",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Adult",
        "speaker": "LSN",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "CA overlap points and indexed overlaps",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: overlap_point (top/bottom brackets), indexed overlaps",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "marker": "top_overlap_begin",
              "type": "overlap_point"
            },
            {
              "cleaned_text": "one",
              "content": [
                {
                  "content": "one",
                  "type": "text"
                }
              ],
              "raw_text": "one",
              "type": "word"
            },
            {
              "marker": "top_overlap_end",
              "type": "overlap_point"
            },
            {
              "index": 2,
              "marker": "top_overlap_begin",
              "type": "overlap_point"
            },
            {
              "cleaned_text": "two",
              "content": [
                {
                  "content": "two",
                  "type": "text"
                }
              ],
              "raw_text": "two",
              "type": "word"
            },
            {
              "index": 2,
              "marker": "top_overlap_end",
              "type": "overlap_point"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "SPK"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "marker": "bottom_overlap_begin",
              "type": "overlap_point"
            },
            {
              "cleaned_text": "one",
              "content": [
                {
                  "content": "one",
                  "type": "text"
                }
              ],
              "raw_text": "one",
              "type": "word"
            },
            {
              "marker": "bottom_overlap_end",
              "type": "overlap_point"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "LSN"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "index": 2,
              "marker": "bottom_overlap_begin",
              "type": "overlap_point"
            },
            {
              "cleaned_text": "two",
              "content": [
                {
                  "content": "two",
                  "type": "text"
                }
              ],
              "raw_text": "two",
              "type": "word"
            },
            {
              "index": 2,
              "marker": "bottom_overlap_end",
              "type": "overlap_point"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "LSN"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "marker": "top_overlap_begin",
              "type": "overlap_point"
            },
            {
              "cleaned_text": "a",
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "a",
              "type": "word"
            },
            {
              "cleaned_text": "b",
              "content": [
                {
                  "content": "b",
                  "type": "text"
                },
                {
                  "content": {
                    "marker": "top_overlap_end"
                  },
                  "type": "overlappoint"
                }
              ],
              "raw_text": "b⌉",
              "type": "word"
            },
            {
              "cleaned_text": "c",
              "content": [
                {
                  "content": "c",
                  "type": "text"
                }
              ],
              "raw_text": "c",
              "type": "word"
            },
            {
              "cleaned_text": "d",
              "content": [
                {
                  "content": "d",
                  "type": "text"
                }
              ],
              "raw_text": "d",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "SPK"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "e",
              "content": [
                {
                  "content": "e",
                  "type": "text"
                }
              ],
              "raw_text": "e",
              "type": "word"
            },
            {
              "cleaned_text": "f",
              "content": [
                {
                  "content": "f",
                  "type": "text"
                }
              ],
              "raw_text": "f",
              "type": "word"
            },
            {
              "marker": "bottom_overlap_begin",
              "type": "overlap_point"
            },
            {
              "cleaned_text": "g",
              "content": [
                {
                  "content": "g",
                  "type": "text"
                }
              ],
              "raw_text": "g",
              "type": "word"
            },
            {
              "cleaned_text": "h",
              "content": [
                {
                  "content": "h",
                  "type": "text"
                },
                {
                  "content": {
                    "marker": "bottom_overlap_end"
                  },
                  "type": "overlappoint"
                }
              ],
              "raw_text": "h⌋",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "LSN"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [
    "CA"
  ],
  "participants": {
    "LSN": {
      "birth_date": null,
      "code": "LSN",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Adult",
        "speaker": "LSN"
      },
      "name": null,
      "role": "Adult"
    },
    "SPK": {
      "birth_date": null,
      "code": "SPK",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Speaker",
        "speaker": "SPK"
      },
      "name": null,
      "role": "Speaker"
    }
  }
}
